--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Crane</h1>
             <a href="crane.jpg"
                 target="_blank">
-                <img src="https://www.thesprucecrafts.com/traditional-origami-crane-2540790">
+                <img src="https://www.thesprucecrafts.com/traditional-origami-crane-2540790" width="368"  height="276">
             </a> 
             <!-- add the link https://www.thesprucecrafts.com/traditional-origami-crane-2540790 for making the crane in a href tag -->
             <!--Set the image src as 'crane.jpg' and width and height to 368 and 276 respectively-->
@@ -37,7 +37,7 @@
             <h1>Tulip Flower</h1>
             <a href="tulip_flower.jpg"
                 target="_blank">
-                <img src="https://www.thesprucecrafts.com/christmas-origami-projects-4147453">
+                <img src="https://www.thesprucecrafts.com/christmas-origami-projects-4147453" width="368"  height="276">
             </a> 
             <!-- add the link https://www.thesprucecrafts.com/christmas-origami-projects-4147453 for making the tulip_flower in a href tag--> 
             <!--Set the image src as 'tulip_flower.jpg' and width and height to 368 and 276 respectively-->
@@ -49,7 +49,7 @@
         <h1>Envelop</h1>
             <a href="envelop.jpg"
                 target="_blank">
-                <img src="https://www.thesprucecrafts.com/make-an-easy-origami-envelope-4094705">
+                <img src="https://www.thesprucecrafts.com/make-an-easy-origami-envelope-4094705" width="368"  height="276">
             </a> 
             <!--add the link https://www.thesprucecrafts.com/make-an-easy-origami-envelope-4094705 for making the Envelop in a href tag-->
             <!--Set the image src as 'envelop.jpg' and width and height to 368 and 276 respectively-->
@@ -57,7 +57,7 @@
             <h1>modular_box</h1>
             <a href="modular_box.jpg"
                 target="_blank">
-                <img src="https://www.thesprucecrafts.com/modular-origami-cube-box-4082281">
+                <img src="https://www.thesprucecrafts.com/modular-origami-cube-box-4082281" width="368"  height="276">
             </a> 
             <!--add the link https://www.thesprucecrafts.com/modular-origami-cube-box-4082281 for making the modular box in a href tag--> 
             <!--Set the image src as 'modular_box.jpg' and width and height to 368 and 276 respectively-->
